--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               >
             </li>
             <li class="header__navigation-item">
-              <a class="header__navigation-link link" href="./portfolio.html"
+              <a
+                class="header__navigation-linkp menu-link link"
+                href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -94,6 +96,21 @@
                   alt="Banking App Interface Concept"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">
                     Banking App Interface Concept
@@ -110,6 +127,21 @@
                   alt="Cashless Payment"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Cashless Payment</h2>
                   <p class="portfolio__section-text">Marketing</p>
@@ -124,6 +156,21 @@
                   alt="Meditation App"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img3.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Meditation App</h2>
                   <p class="portfolio__section-text">App</p>
@@ -138,6 +185,21 @@
                   alt="Taxi Service"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img4.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Taxi Service</h2>
                   <p class="portfolio__section-text">Marketing</p>
@@ -152,6 +214,21 @@
                   alt="Seen Illustrationscr"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img5.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Screen Illustrations</h2>
                   <p class="portfolio__section-text">Design</p>
@@ -166,6 +243,21 @@
                   alt="Online Courses"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img6.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Online Courses</h2>
                   <p class="portfolio__section-text">Marketing</p>
@@ -180,6 +272,21 @@
                   alt="Instagram Stories Concept"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img7.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">
                     Instagram Stories Concept
@@ -196,6 +303,21 @@
                   alt="Organic Food"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img8.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Organic Food</h2>
                   <p class="portfolio__section-text">Web Site</p>
@@ -210,6 +332,21 @@
                   alt="Fresh Coffee"
                   width="360"
                 />
+                <div class="blok">
+                  <img
+                    class="portfolio__section-photo"
+                    src="./images/projects/img9.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="product-owerlay">
+                    <div class="owerlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </div>
+                  </div>
+                </div>
                 <div class="border">
                   <h2 class="portfolio__section-title">Fresh Coffee</h2>
                   <p class="portfolio__section-text">Web Site</p>
