--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,6 @@
           <ul class="portfolio__section-list list">
             <li class="portfolio__section-item">
               <a class="portfolio__section-link link" href="">
-                <img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -121,12 +115,6 @@
             </li>
             <li class="portfolio__section-item">
               <a class="portfolio__section-link link" href="">
-                <img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -150,12 +138,6 @@
             </li>
             <li class="portfolio__section-item">
               <a class="portfolio__section-link link" href="">
-                <img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -179,12 +161,6 @@
             </li>
             <li class="portfolio__section-item">
               <a class="portfolio__section-link link" href="">
-                <img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -208,12 +184,6 @@
             </li>
             <li class="portfolio__section-item">
               <a class="portfolio__section-link link" href="">
-                <img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img5.jpg"
-                  alt="Seen Illustrationscr"
-                  width="360"
-                />
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -237,12 +207,6 @@
             </li>
             <li class="portfolio__section-item">
               <a class="portfolio__section-link link" href="">
-                <img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -265,13 +229,7 @@
               >
             </li>
             <li class="portfolio__section-item">
-              <a class="portfolio__section-link link" href=""
-                ><img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+              <a class="portfolio__section-link link" href="">
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -296,13 +254,7 @@
               >
             </li>
             <li class="portfolio__section-item">
-              <a class="portfolio__section-link link" href=""
-                ><img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+              <a class="portfolio__section-link link" href="">
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
@@ -325,13 +277,7 @@
               >
             </li>
             <li class="portfolio__section-item">
-              <a class="portfolio__section-link link" href=""
-                ><img
-                  class="portfolio__section-photo"
-                  src="./images/projects/img9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
+              <a class="portfolio__section-link link" href="">
                 <div class="blok">
                   <img
                     class="portfolio__section-photo"
