--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!--------------------------- HERO SECTION--------------------------------->
     <main>
-      <section class="section hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button data-modal-open class="hero__button" type="button">
@@ -445,7 +445,7 @@
       <!------------------- SECTION CUSTOMERS ---------------------->
       <section class="customers">
         <div class="container">
-          <h3 class="customers__title">Customers</h3>
+          <h2 class="customers__title">Customers</h2>
           <ul class="customers__list">
             <li class="customers__item">
               <a class="customers__link" href=""
